# synvya-client

./: .cursorrules  .env  .env.example  .gitignore  AWS_LAMBDA_DEPLOYMENT.md  LICENSE  NOSTR_ARCHITECTURE.md  README.md  aws-deployment-guide.md  aws-lambda-env-example.txt  aws-lambda-infrastructure.yml  aws-lambda-policy-additions.json  cloudfront-security-headers.js  deploy-aws-static.sh  deployment-summary.md  docker-compose.db.yml  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  production-env-example.txt  tailwind.config.ts  test-delegation.html  test-lambda-payload.json  tsconfig.app.json  update-dns.sh  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
aws-lambda/check-contact/: index.js
aws-lambda/check-subscription/: index.js
aws-lambda/check-user-exists/: index.js  package.json
aws-lambda/create-zaprite-order/: index.js
aws-lambda/get-order/: index.js  package.json
aws-lambda/get-user-orders/: index.js  (+1 more)
docs/: development-environment.md  zaprite-openapi-spec.json
public/: runtime-env.js
scripts/: build-lambda-functions.sh  deploy-lambda-infrastructure.sh  generate-runtime-config.sh
server/: Dockerfile  pyproject.toml
server/app/: .env  .env.example  main.py
server/app/api/: __init__.py  delegations.py  products.py  profile.py
server/app/core/: config.py
server/app/db/: __init__.py  delegations.py  session.py
server/app/dependencies/: __init__.py  dependencies.py
server/app/schemas/: __init__.py  signed_event.py
server/tests/: test_health.py
src/: index.css
web/: Dockerfile  package.json
(+67 files in other folders)
